update POM